--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 						</script>
 					</span>
 					<ul class="headerlist">
-						<li><a href="../landing/"> ចុះឈ្មោះចូល / ចូលរួម </a></li>
+						<li><a href="https://aleboo123.pro/?flow_hash=PRdXTejp"> ចុះឈ្មោះចូល / ចូលរួម </a></li>
 						<li><a href="../landing/"> អំពី TCB </a></li>
 						<li><a href="../landing/"> ស្តីពី TCB </a></li>
 						<li><a href="../landing/"> កំណត់សម្គាល់ប្លក់ </a></li>
